--- a/.env.development
+++ b/.env.development
@@ -11,12 +11,11 @@ VITE_USE_MOCK = true
 VITE_DROP_CONSOLE = true
 
 # 跨域代理，可以配置多个，请注意不要换行
-# VITE_PROXY = [["/appApi","http://localhost:8001"],["/upload","http://localhost:8001/upload"]]
-# VITE_PROXY=[["/api","http://localhost:8001"]]
+# VITE_PROXY=[["/api","http://yc.corner-s.com"]]
 
 # API 接口地址
 # 如果没有跨域问题，直接在这里配置即可
-VITE_GLOB_API_URL =
+VITE_API_URL = http://yc.corner-s.com
 
 # 图片上传地址
 VITE_GLOB_UPLOAD_URL =
