--- a/.env
+++ b/.env
@@ -2,13 +2,13 @@
 VITE_PORT = 8000
 
 # spa-title
-VITE_GLOB_APP_TITLE = Vue3Vant4Mobile
+VITE_GLOB_APP_TITLE = 每一角落
 
 # 系统中文名称
-VITE_GLOB_APP_TITLE_CN = vue3-vant4-mobile
+VITE_GLOB_APP_TITLE_CN = 每一角落
 
 # spa shortname 不可出现空格数字等特殊字符
-VITE_GLOB_APP_SHORT_NAME = vantMobile
+VITE_GLOB_APP_SHORT_NAME = 每一角落
 
 # 生产环境 开启mock
 VITE_GLOB_PROD_MOCK = true
