--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@antv/g2plot": "^2.4.31",
+    "@antv/s2": "^1.45.1",
+    "@antv/s2-vue": "^1.5.0",
+    "@nutui/nutui": "^4.0.7",
     "@types/lodash-es": "^4.17.6",
     "@vicons/antd": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
@@ -33,14 +37,16 @@
     "@vueuse/core": "^9.2.0",
     "axios": "^0.26.1",
     "date-fns": "^2.29.2",
+    "dayjs": "^1.11.7",
     "echarts": "^5.3.3",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "pinia": "^2.0.19",
     "pinia-plugin-persist": "^1.0.0",
     "qs": "^6.11.0",
-    "vant": "4.0.0-beta.0",
+    "vant": "4.3.1",
     "vue": "^3.2.37",
+    "vue-echarts": "^6.5.5",
     "vue-router": "4.1.5",
     "vue-types": "^4.2.1"
   },
