--- a/.env.production
+++ b/.env.production
@@ -8,7 +8,7 @@ VITE_PUBLIC_PATH = /mobile-app
 VITE_DROP_CONSOLE = true
 
 # API
-VITE_GLOB_API_URL = http://yc.corner-s.com
+VITE_GLOB_API_URL = https://dd.corner-s.com
 
 # 图片上传地址
 VITE_GLOB_UPLOAD_URL =
